fix full_name