@@ -3,12 +3,15 @@ package fpt.capstone.edu360managementsystem.service;
 import fpt.capstone.edu360managementsystem.dto.response.RoomResponse;
 import fpt.capstone.edu360managementsystem.dto.response.UserInfoResponse;
 import fpt.capstone.edu360managementsystem.dto.response.UserResponse;
+import fpt.capstone.edu360managementsystem.entity.User;
 import fpt.capstone.edu360managementsystem.mapper.UserMapper;
 import fpt.capstone.edu360managementsystem.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -18,10 +21,17 @@ public class UserService {
 
     @Autowired
     private UserMapper userMapper;
-
-    public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
-                .map(userMapper::toResponse)
-                .toList();
-    }
+//
+//    public List<UserResponse> getAllUsers() {
+//        return userRepository.findAll().stream()
+//                .map(userMapper::toResponse)
+//                .toList();
+//    }
+@Transactional(readOnly = true)
+public List<UserResponse> getAllUsers() {
+    return userRepository.findAll()
+            .stream()
+            .map(userMapper::toResponse)
+            .collect(Collectors.toList());
+}
 }
